# pompora

./: .gitignore  LICENSE  README.md  agent_log.txt  index.html  package-lock.json  package.json  tailwind.config.cjs  todo.md
.github/workflows/: release.yml
public/: Untitled design (11).png:Zone.Identifier
src/: App.tsx  AppShell.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/permissions/: pompora.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: ai.rs  auth.rs  fsops.rs  mod.rs  search.rs  secrets.rs  settings.rs  terminal.rs  workspace.rs
src/fonts/: perfograma.regular.otf:Zone.Identifier
src/lib/: tauri.ts  types.ts
src/styles/: globals.css
