[package]
name = "pompora"
version = "0.1.0"
description = "Pompora"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pompora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0"
base64 = "0.22"
keyring = "3"
rand = "0.8"
ring = "0.17"
rfd = "0.14"
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
once_cell = "1"
thiserror = "2"
tokio-util = "0.7"
walkdir = "2"
portable-pty = "0.8"
urlencoding = "2"

